# vertical-federated-learning-poultry

./: README.md  pyproject.toml  server_app.py  strategy.py
vertical_fl/: client_app.py  server_app.py  task.py
vertical_fl_own/: client_app.py  server_app.py  task.py
