[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertical-fl-own"
version = "1.0.0"
description = "PyTorch Vertical FL with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets>=0.5.0",
    "pandas==2.2.3",
    "numpy>=1.26.0",
    "scikit-learn==1.5.0",
    "torch==2.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "vertical_fl_own.server_app:app"
clientapp = "vertical_fl_own.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10  # changed from 3!
learning-rate = 0.1 #this is for the client side, which is gradient descent

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3 # Note that this example will require changes to how VFL is implemented

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true