[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertical-fl-own"
version = "1.0.0"
description = "PyTorch Vertical FL with Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.25.0",
    "flwr-datasets>=0.5.0",
    "pandas==2.3.3",
    "numpy>=1.26.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "vertical_fl_own.server_app:app"
clientapp = "vertical_fl_own.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 250
learning-rate = 0.01
out-feature-dim-clientapp = 64 # Output feature dimension for client app
# ["HatchYear","Type","HatchQuarter","FarmAvgAbAfterWk1","VetAvgAbAfterWk1","Thinning","EndFlockSize","NumberOfHouses"]
feature-splits = "5,3" # Comma-separated number of features per client (they must add up to 8)
                         # And there must be as many entries as num-supernodes configured below

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2 # This must be equal to number of `feature-splits` entries
